<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RVOCASSION"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.occasions.OccasionsFragment">



    <TextView
        android:id="@+id/TVOCCASION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/Select"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TVOCCASION"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/LN01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="14dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_cus_Valentines"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/occassion1"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Birthday"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Occassion2"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Wedding"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Occassion3"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Promotions"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Occassion4"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Party"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Occasion5"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Bridal"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Occassion6"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <Button
                        android:id="@+id/btn_cus_Other"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/buttons"
                        android:backgroundTint="#F54808"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/Other"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>