<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1DBDB"
    android:backgroundTint="#E1DBDB"
    tools:context=".Admin_reset_password">

    <RelativeLayout
        android:id="@+id/RLHEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3CC66">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/resetPassword"
            android:textAlignment="center"
            android:textColor="#090909"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RLHEADER"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/pwd"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/ed_OLDPASSWORD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/stroke"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#919191"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/newpwd"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/ed_NEWPASSOWRD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/stroke"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/repeatpwd"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/ed_REPEATPASSWORD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/stroke"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/BTN_SAVE_ADMIN_PASSWORD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/buttons_admin"
            android:text="@string/AddProductSave"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BTN_ADMIN_CANCEL_RESET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/buttons_admin"
            android:backgroundTint="#EF0606"
            android:text="@string/text_cancel"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>